# Vig

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  rust.yml
src/: analyzer.rs  generator.rs  lexer.rs  lib.rs  main.rs
testdata/: alu.vhd  counter.vhd  uart_tx.vhd
tests/: analyzer_test.rs  generator_test.rs  lexer_file_test.rs
